<resources>
    <string name="app_name">LabExam02</string>
    <string name="good_evening">Good Evening!</string>
    <string name="hi_ravindu_pasanjith">Hi Ravindu Pasanjith</string>
    <string name="find_toyr_food">Find Toyr Food</string>
    <string name="todo">TODO</string>
    <string name="hi_ravindu_pasanjith_1">Hi Ravindu Pasanjith</string>
    <string name="good_evening_1">Good Evening!</string>
    <string name="todo_1">TODO</string>
    <string name="todo_2">TODO</string>
    <string name="todo_3">TODO</string>
    <string name="todo_4">TODO</string>
    <string name="todo_5">TODO</string>
    <string name="todo_6">TODO</string>
    <string name="pizzburger_haven">PizzBurger Haven</string>
    <string name="food_delivery_app">Food Delivery App</string>
    <string name="get_started">Get Started</string>
    <string name="todo_7">TODO</string>
    <string name="welcome_to_pizzburger_haven">Welcome to PizzBurger Haven</string>
    <string name="we_have_many_features_such_as_shoping_cart_map_and_messenger_for_you_in_this_app_you_can_enjoy_in_app">We have many features such as shoping cart,map and messenger for you in this app. You can enjoy in App</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="march_8_april_20">March 8 - April 20</string>
    <string name="cheese_burger">Cheese Burger</string>
    <string name="order_now">Order Now</string>
    <string name="todo_9">TODO</string>
    <string name="_2999_00">2999.00</string>
    <string name="lkr">LKR</string>
    <string name="add">+Add</string>
    <string name="pepperoni_pizza">Pepperoni pizza</string>
    <string name="todo_10">TODO</string>
    <string name="_3999_00">3999.00</string>
    <string name="lkr_1">LKR</string>
    <string name="add_1">+Add</string>
    <string name="todo_11">TODO</string>
    <string name="pepperoni_pizza_1">Pepperoni pizza</string>
    <string name="lkr_3999_00_1">LKR 3999.00</string>
    <string name="_1">1</string>
    <string name="slices_pepperoni_mozzarella_cheese_fresh_fresh_oregano_ground_black_pepper_pizza_sauce">slices pepperoni,mozzarella cheese, fresh, fresh oregano, ground black pepper, pizza sauce</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="pizzburger_haven_1">PizzBurger Haven</string>
    <string name="food_delivery_app_1">Food Delivery App</string>
    <string name="get_started_1">Get Started</string>
    <string name="todo_12">TODO</string>
    <string name="pizzburger_haven_2">PizzBurger Haven</string>
    <string name="todo_13">TODO</string>
    <string name="enjoy_our_app">Enjoy Our App</string>
    <string name="next">Next</string>
    <string name="my_cart">My Cart</string>
    <string name="cheese_burger_1">Cheese Burger</string>
    <string name="_2999_00_1">2999.00</string>
    <string name="todo_14">TODO</string>
    <string name="lkr_3">LKR</string>
    <string name="pepperoni_pizza_1_1">Pepperoni pizza</string>
    <string name="todo_15">TODO</string>
    <string name="_3999_00_4">3999.00</string>
    <string name="lkr_6">LKR</string>
    <string name="items_total">Items Total:</string>
    <string name="lkr_3999_00">LKR 3999.00</string>
    <string name="delivery_services_1">Delivery Services:</string>
    <string name="_0">0</string>
    <string name="tax">Tax:</string>
    <string name="_0_1">0</string>
    <string name="total">Total:</string>
    <string name="lrk_3999_00">LRK 3999.00</string>
    <string name="checkout">CheckOut</string>
    <string name="todo_16">TODO</string>
    <string name="todo_17">TODO</string>
    <string name="todo_18">TODO</string>
    <string name="checkout_1">CheckOut</string>
    <string name="checkout_3">CheckOut</string>
</resources>