<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:layout_marginVertical="10dp">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/secondary"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/my_cart"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="193dp"
                android:layout_height="167dp"
                android:layout_margin="10dp"
                android:background="@drawable/cart_background"
                android:elevation="3dp"
                app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
                tools:layout_editor_absoluteY="291dp">

                <TextView
                    android:id="@+id/title_1"
                    android:layout_width="200dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="@string/cheese_burger_1"
                    android:textColor="#373b54"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fee_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="48dp"
                    android:text="@string/_2999_00_1"
                    android:textColor="#373b54"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="185dp"
                    android:layout_height="116dp"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/todo_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_1"
                    app:srcCompat="@drawable/bacon_and_cheese_heaven" />

                <TextView
                    android:id="@+id/textView16_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/lkr_3"
                    android:textColor="@color/primary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/fee_1"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="196dp"
                android:layout_height="173dp"
                android:layout_margin="10dp"
                android:background="@drawable/cart_background"
                android:elevation="3dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="291dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="200dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="@string/pepperoni_pizza_1_1"
                    android:textColor="#373b54"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/pic"
                    android:layout_width="187dp"
                    android:layout_height="122dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/todo_15"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.512"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    app:srcCompat="@drawable/margherita" />

                <TextView
                    android:id="@+id/fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3999_00_4"
                    android:textColor="#373b54"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/pic"
                    app:layout_constraintStart_toStartOf="@+id/pic"
                    app:layout_constraintTop_toBottomOf="@+id/pic" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:text="@string/lkr_6"
                    android:textColor="@color/primary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/fee"
                    app:layout_constraintEnd_toStartOf="@+id/fee"
                    app:layout_constraintTop_toBottomOf="@+id/pic" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                tools:layout_marginStart="16dp">

                <TextView
                    android:id="@+id/textView4_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/items_total"
                    android:textColor="@color/primary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalFeeTxt_1"
                    android:layout_width="0.1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lkr_3999_00"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                tools:layout_marginStart="16dp">

                <TextView
                    android:id="@+id/textView4_1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delivery_services_1"
                    android:textColor="@color/primary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TaxTxt"
                    android:layout_width="0.1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                tools:layout_marginStart="16dp">

                <TextView
                    android:id="@+id/textView4_1_1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tax"
                    android:textColor="@color/primary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalTxt_1_1"
                    android:layout_width="0.1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0_1"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                tools:layout_marginStart="16dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total"
                    android:textColor="@color/primary"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalTxt"
                    android:layout_width="0.1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lrk_3999_00"
                    android:textColor="@color/primary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="300dp"
                android:layout_height="84dp"
                android:layout_marginStart="39dp"
                android:layout_marginTop="44dp"
                android:layout_marginBottom="26dp"
                android:backgroundTint="@color/primary"
                android:padding="18dp"
                android:text="@string/checkout_3"
                android:textColor="@color/accents"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/orange_light_banner"
                android:backgroundTint="@color/accents"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/home"
                    android:layout_width="34dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:contentDescription="@string/todo_16"
                    app:srcCompat="@drawable/baseline_home_24" />

                <ImageView
                    android:id="@+id/cart"
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo_17"
                    app:srcCompat="@drawable/baseline_add_shopping_cart_24" />

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="70dp"
                    android:contentDescription="@string/todo_18"
                    app:srcCompat="@drawable/baseline_account_box_24" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>