<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F57D1F"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/hi_ravindu_pasanjith_1"
            android:textColor="@color/accent"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_evening_1"
            android:textColor="@color/accent"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="410dp"
            android:layout_height="492dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bottom_background_light_green"
            android:backgroundTint="@color/secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:layout_editor_absoluteY="487dp"
                tools:ignore="MissingConstraints">

            </FrameLayout>

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="323dp"
                android:layout_height="198dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile_1"
                android:contentDescription="@string/todo_1" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="308dp"
                android:layout_height="182dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView13"
                app:layout_constraintVertical_bias="0.486"
                app:srcCompat="@drawable/profile_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="@drawable/orange_light_banner"
            android:backgroundTint="@color/accents"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

            <ImageView
                android:id="@+id/home"
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"

                app:srcCompat="@drawable/baseline_home_24"
                android:contentDescription="@string/todo_2" />

            <ImageView
                android:id="@+id/cart"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/baseline_add_shopping_cart_24"
                android:contentDescription="@string/todo_3" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_marginStart="70dp"
                app:srcCompat="@drawable/baseline_account_box_24"
                android:contentDescription="@string/todo_4" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>